--- a/content/20170301.md
+++ b/content/20170301.md
@@ -27,6 +27,8 @@ Author: 40423152
 1.有沒有辦法在每週上課後第1堂下課之前, 在各組網誌上呈現當週各學員的出席情況與座次表?
 
 固定座位的部分已在同學提供的ethercalc上劃位完成，每周上課點名可的方式可以使用該表格進行註記。
+座位表如下(截至20170301 23:30)
+<a href="http://imgur.com/9HNHqGa"><img src="http://i.imgur.com/9HNHqGa.jpg" title="source: imgur.com" /></a>
 
 2.各組員會不會從無到有, 自行打造此一可攜程式系統?
 
