--- a/content/20170301.md
+++ b/content/20170301.md
@@ -12,14 +12,18 @@ Author: 40423152
 
 四連桿實體版本
 首要零件繪製如下
+其餘零件如法炮製
 <iframe src="https://player.vimeo.com/video/206266484" width="640" height="325" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/206266484">2017-03-02 00-32-32</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 
 拼湊部分如同以前組立一般
+
 完成如下圖所示之四連桿
 
 <a href="http://imgur.com/georQ6O"><img src="http://i.imgur.com/georQ6O.jpg" title="source: imgur.com" /></a>
+
+
 
 
 每周任務
