--- a/content/20170316.md
+++ b/content/20170316.md
@@ -1,4 +1,4 @@
-Title: 協同產品設計實習 第四周作業(待補) 40423152
+Title: 協同產品設計實習 第四周作業 40423152
 Date: 2017-03-16 12:08
 Category:作業
 Tags: 作業
@@ -8,7 +8,13 @@ Author: 40423152
 
 <!-- PELICAN_END_SUMMARY -->
 
-本周內容 (待補)
+本周內容
 
-fossil
-<a href="http://imgur.com/ZP2rokM"><img src="http://i.imgur.com/ZP2rokM.png" title="source: imgur.com" /></a>
+在小黑窗鍵入
+
+fossil init 檔名.fossil
+
+表示建立一個新的倉儲
+
+<iframe src="https://player.vimeo.com/video/209247673" width="640" height="192" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/209247673">2017-03-21_01-27-43</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
