--- a/content/20170309.md
+++ b/content/20170309.md
@@ -14,3 +14,5 @@ Author: 40423152
 
 <iframe src="https://player.vimeo.com/video/207569345" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/207569345">20170309</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+過程中有利用youtube的字幕，但超多錯誤，所以邊參考邊逐行逐行聽，有些聯音的部分在亞洲大學生耳裡還是很不習慣。
