--- a/content/20170309.md
+++ b/content/20170309.md
@@ -16,3 +16,7 @@ Author: 40423152
 <p><a href="https://vimeo.com/207569345">20170309</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 過程中有利用youtube的字幕，但超多錯誤，所以邊參考邊逐行逐行聽，有些聯音的部分在亞洲大學生耳裡還是很不習慣。
+
+心得:
+
+老師說的可以參考youtube字幕，個人親自翻譯之後發現上面字幕有許多顯而易見的錯誤，不過至少有部分可以參考，很辛苦，不過很有學習價值。
