--- a/content/20170316.md
+++ b/content/20170316.md
@@ -20,3 +20,7 @@ fossil init 檔名.fossil
 <p><a href="https://vimeo.com/209247673">2017-03-21_01-27-43</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 馬上利用fossil創造一個新的倉儲，也改了一個新的start.bat，變成全自動的好酷，不過當時在設定時不知為何有時跑出題是視窗有時卻沒有提示視窗.....多花了一點時間。
+
+心得:
+
+禁行批次檔的更改，並了解批次檔的語法，十分有趣的過程。
