--- a/content/20170330.md
+++ b/content/20170330.md
@@ -29,4 +29,5 @@ Author: 40423152
 <p><a href="https://vimeo.com/212952483">錄製_2017_04_12_22_49_21_902</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 心得:
-八連桿貼上關節花了不少時間，建立起來後十分有成就感。
+
+八連桿貼上關節花了不少時間，建立起來後，雖然動得十分緩慢，但富有成就感。
