--- a/content/20170330.md
+++ b/content/20170330.md
@@ -1,4 +1,4 @@
-Title: 協同產品設計實習 第六周作業 40423152
+Title: 協同產品設計實習 第六與第七周作業 40423152
 Date: 2017-03-30 12:08
 Category:作業
 Tags: 作業
@@ -23,7 +23,7 @@ Author: 40423152
 
 <a href="http://imgur.com/Mql9CaN"><img src="http://i.imgur.com/Mql9CaN.png" title="source: imgur.com" /></a>
 
-八連桿導入onshape
+八連桿導入V-rep
 
 <iframe src="https://player.vimeo.com/video/212952483" width="640" height="342" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/212952483">錄製_2017_04_12_22_49_21_902</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
