--- a/content/20170420.md
+++ b/content/20170420.md
@@ -30,12 +30,11 @@ Author: 40423152
 4.STL viewer
 利用 <a href="https://github.com/JinJunho/Madeleine.js">Madeleine 程式庫</a>, 擷取位於 ./../data/fourfoot.stl 位置的零件 stl 格式檔案:
 
-
-<link href="./../20170426/madeleine/src/css/Madeleine.css" rel="stylesheet">
-<script src="./../20170426/madeleine/src/lib/stats.js"></script>
-<script src="./../20170426/madeleine/src/lib/detector.js"></script>
-<script src="./../20170426/madeleine/src/lib/three.min.js"></script>
-<script src="./../20170426/madeleine/src/Madeleine.js"></script>
+<link href="./../data/madeleine/src/css/Madeleine.css" rel="stylesheet">
+<script src="./../data/madeleine/src/lib/stats.js"></script>
+<script src="./../data/madeleine/src/lib/detector.js"></script>
+<script src="./../data/madeleine/src/lib/three.min.js"></script>
+<script src="./../data/madeleine/src/Madeleine.js"></script>
 
 <div id="target" class="madeleine"></div>
 
@@ -43,8 +42,8 @@ Author: 40423152
 window.onload = function(){
     var madeleine = new Madeleine({
       target: 'target', // target div id
-      data: './../20170426/fourfoot.stl', // data path
-      path: './../20170426/madeleine/src/' // path to source directory from current html file
+      data: './../data/foot.stl', // data path
+      path: './../data/madeleine/src/' // path to source directory from current html file
     });
 }; 
 </script>
@@ -53,8 +52,8 @@ window.onload = function(){
 ></script>
 <script src="https://rawgit.com/mrdoob/three.js/master/examples/js/controls/TrackballControls.js"
 ></script>
-<script src="./../20170426/w9/loader.js"></script>
-<script src="./../20170426/w9/stl.js"></script>
+<script src="./../data/w9/loader.js"></script>
+<script src="./../data/w9/stl.js"></script>
 <div>
 select stl file: <input type="file" id="file" /> or drop stl file
 </div>
