--- a/content/20170420.md
+++ b/content/20170420.md
@@ -28,7 +28,7 @@ Author: 40423152
 <p><a href="https://vimeo.com/214495571">40423152-國立虎尾科技大學-機械設計工程系-四足</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 4.STL viewer
-利用 <a href="https://github.com/JinJunho/Madeleine.js">Madeleine 程式庫</a>, 擷取位於 ./../data/fourfoot.stl 位置的零件 stl 格式檔案:
+利用 <a href="https://github.com/JinJunho/Madeleine.js">Madeleine 程式庫</a>, 擷取位於 ./../data/foot.stl 位置的零件 stl 格式檔案:
 
 <link href="./../data/madeleine/src/css/Madeleine.css" rel="stylesheet">
 <script src="./../data/madeleine/src/lib/stats.js"></script>
