--- a/content/20170420.md
+++ b/content/20170420.md
@@ -18,25 +18,24 @@ Author: 40423152
 <a href="http://imgur.com/6Gv0ine"><img src="http://i.imgur.com/6Gv0ine.png" title="source: imgur.com" /></a>
 
 Brython
-<!-- 導入 Brython 標準程式庫 -->
- 
-<script type="text/javascript" src="https://cdn.rawgit.com/brython-dev/brython/master/www/src/brython_dist.js">
+<script type="text/javascript" 
+    src="https://cdn.rawgit.com/brython-dev/brython/master/www/src/brython_dist.js">
 </script>
- 
+
 <!-- 啟動 Brython -->
- 
+
 <script>
 window.onload=function(){
 brython(1);
 }
 </script>
- 
+
 <!-- 以下實際利用  Brython 畫四連桿 trace point 路徑-->
- 
-<canvas id="fourbar" width="600" height="400"></canvas>
- 
+
+<canvas id="fourbar" width="800" height="1200"></canvas>
+
 <div id="container1"></div>
- 
+
 <script type="text/python3">
 from browser import document as doc
 from browser import html
@@ -45,15 +44,15 @@ import math
 canvas = doc["fourbar"]
 container1 = doc['container1']
 ctx = canvas.getContext("2d")
- 
-fourbar_data = open("./../data/HW.csv").read()
+
+fourbar_data = open("./../work/HW.csv").read()
 fourbar_list = fourbar_data.splitlines()
 #container1 <= fourbar_list[0]
 # 以下可以利用 ctx 物件進行畫圖
 # 先畫一條直線
 ctx.beginPath()
 # 設定線的寬度為 1 個單位
-ctx.lineWidth = 1
+ctx.lineWidth = 0.5
 # 利用 transform 將 y 座標反轉, 且 offset canvas.height
 # (X scale, X skew, Y skew, Y scale, X offset, Y offset)
 # 配合圖形位置進行座標轉換
@@ -80,6 +79,7 @@ ctx.closePath()
 </script>
 
 影片如下
+
 <iframe src="https://player.vimeo.com/video/214495718" width="640" height="342" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/214495718">40423152-國立虎尾科技大學-機械設計工程系-trace point</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
@@ -92,11 +92,11 @@ ctx.closePath()
 4.STL viewer
 利用 <a href="https://github.com/JinJunho/Madeleine.js">Madeleine 程式庫</a>, 擷取位於 ./../data/foot.stl 位置的零件 stl 格式檔案:
 
-<link href="./../data/madeleine/src/css/Madeleine.css" rel="stylesheet">
-<script src="./../data/madeleine/src/lib/stats.js"></script>
-<script src="./../data/madeleine/src/lib/detector.js"></script>
-<script src="./../data/madeleine/src/lib/three.min.js"></script>
-<script src="./../data/madeleine/src/Madeleine.js"></script>
+<link href="./../work/madeleine/src/css/Madeleine.css" rel="stylesheet">
+<script src="./../work/madeleine/src/stats.js"></script>
+<script src="./../work/madeleine/src/detector.js"></script>
+<script src="./../work/madeleine/src/three.min.js"></script>
+<script src="./../work/madeleine/src/Madeleine.js"></script>
 
 <div id="target" class="madeleine"></div>
 
@@ -104,8 +104,8 @@ ctx.closePath()
 window.onload = function(){
     var madeleine = new Madeleine({
       target: 'target', // target div id
-      data: './../data/foot.stl', // data path
-      path: './../data/madeleine/src/' // path to source directory from current html file
+      data: './../work/foot.stl', // data path
+      path: './../work/madeleine/src/' // path to source directory from current html file
     });
 }; 
 </script>
@@ -114,8 +114,8 @@ window.onload = function(){
 ></script>
 <script src="https://rawgit.com/mrdoob/three.js/master/examples/js/controls/TrackballControls.js"
 ></script>
-<script src="./../data/w9/loader.js"></script>
-<script src="./../data/w9/stl.js"></script>
+<script src="./../work/w9/loader.js"></script>
+<script src="./../work/w9/stl.js"></script>
 <div>
 select stl file: <input type="file" id="file" /> or drop stl file
 </div>
