--- a/content/20170420.md
+++ b/content/20170420.md
@@ -17,7 +17,10 @@ Author: 40423152
 
 <a href="http://imgur.com/6Gv0ine"><img src="http://i.imgur.com/6Gv0ine.png" title="source: imgur.com" /></a>
 
-Brython
+Brython 可是他跑不出來....
+程式碼節錄自
+<a href="http://imgur.com/qmxnRHL"><img src="http://i.imgur.com/qmxnRHL.png" title="source: imgur.com" /></a>
+
 <script type="text/javascript" 
     src="https://cdn.rawgit.com/brython-dev/brython/master/www/src/brython_dist.js">
 </script>
@@ -91,12 +94,16 @@ ctx.closePath()
 
 4.STL viewer
 利用 <a href="https://github.com/JinJunho/Madeleine.js">Madeleine 程式庫</a>, 擷取位於 ./../data/foot.stl 位置的零件 stl 格式檔案:
+近端跑得出來 遠端無法.....
+附上近端圖片
 
-<link href="./../work/madeleine/src/css/Madeleine.css" rel="stylesheet">
-<script src="./../work/madeleine/src/stats.js"></script>
-<script src="./../work/madeleine/src/detector.js"></script>
-<script src="./../work/madeleine/src/three.min.js"></script>
-<script src="./../work/madeleine/src/Madeleine.js"></script>
+<a href="http://imgur.com/1AxGAVn"><img src="http://i.imgur.com/1AxGAVn.png" title="source: imgur.com" /></a>
+
+<link href="./../data/madeleine/src/css/Madeleine.css" rel="stylesheet">
+<script src="./../data/madeleine/src/lib/stats.js"></script>
+<script src="./../data/madeleine/src/lib/detector.js"></script>
+<script src="./../data/madeleine/src/lib/three.min.js"></script>
+<script src="./../data/madeleine/src/Madeleine.js"></script>
 
 <div id="target" class="madeleine"></div>
 
@@ -104,8 +111,8 @@ ctx.closePath()
 window.onload = function(){
     var madeleine = new Madeleine({
       target: 'target', // target div id
-      data: './../work/foot.stl', // data path
-      path: './../work/madeleine/src/' // path to source directory from current html file
+      data: './../data/spikeball.stl', // data path
+      path: './../data/madeleine/src/' // path to source directory from current html file
     });
 }; 
 </script>
@@ -114,8 +121,8 @@ window.onload = function(){
 ></script>
 <script src="https://rawgit.com/mrdoob/three.js/master/examples/js/controls/TrackballControls.js"
 ></script>
-<script src="./../work/w9/loader.js"></script>
-<script src="./../work/w9/stl.js"></script>
+<script src="./../data/w9/loader.js"></script>
+<script src="./../data/w9/stl.js"></script>
 <div>
 select stl file: <input type="file" id="file" /> or drop stl file
 </div>
