--- a/content/20170420.md
+++ b/content/20170420.md
@@ -4,7 +4,7 @@ Category:作業
 Tags: 作業
 Author: 40423152
 
-
+總查驗
 
 <!-- PELICAN_END_SUMMARY -->
 
@@ -18,7 +18,8 @@ Author: 40423152
 <a href="http://imgur.com/6Gv0ine"><img src="http://i.imgur.com/6Gv0ine.png" title="source: imgur.com" /></a>
 
 Brython 可是他跑不出來....
-程式碼節錄自
+程式碼節錄自本人leo
+
 <a href="http://imgur.com/qmxnRHL"><img src="http://i.imgur.com/qmxnRHL.png" title="source: imgur.com" /></a>
 
 <script type="text/javascript" 
@@ -94,7 +95,9 @@ ctx.closePath()
 
 4.STL viewer
 利用 <a href="https://github.com/JinJunho/Madeleine.js">Madeleine 程式庫</a>, 擷取位於 ./../data/foot.stl 位置的零件 stl 格式檔案:
+
 近端跑得出來 遠端無法.....
+
 附上近端圖片
 
 <a href="http://imgur.com/1AxGAVn"><img src="http://i.imgur.com/1AxGAVn.png" title="source: imgur.com" /></a>
@@ -111,7 +114,7 @@ ctx.closePath()
 window.onload = function(){
     var madeleine = new Madeleine({
       target: 'target', // target div id
-      data: './../data/spikeball.stl', // data path
+      data: './../data/foot.stl', // data path
       path: './../data/madeleine/src/' // path to source directory from current html file
     });
 }; 
