--- a/content/20170420.md
+++ b/content/20170420.md
@@ -23,7 +23,10 @@ Brython 可是他跑不出來....
 <a href="http://imgur.com/qmxnRHL"><img src="http://i.imgur.com/qmxnRHL.png" title="source: imgur.com" /></a>
 
 <script type="text/javascript" 
-    src="https://cdn.rawgit.com/brython-dev/brython/master/www/src/brython_dist.js">
+    src="./../data/Brython-3.3.1/brython.js">
+</script>
+<script type="text/javascript" 
+    src="./../data/Brython-3.3.1/brython_stdlib.js">
 </script>
 
 <!-- 啟動 Brython -->
