--- a/content/20170504.md
+++ b/content/20170504.md
@@ -171,19 +171,18 @@ div = doc["onegear_div"]
 div <= "2b: " +  str(count) + "/" + str(len(student))
 </script>
 
+
 <!-- 以下處理 Cango Spur Gear -->
 
 <!-- Cango 程式庫 -->
 <script type="text/javascript" src="./../data/w11/cango
-_old/Cango-8v03.js"></script>
+/Cango-9v05-min.js"></script>
 <script type="text/javascript" src="./../data/w11/cango
-_old/Cango2D-7v01-min.js"></script>
+/CangoAxes-2v09.js"></script>
 <script type="text/javascript" src="./../data/w11/cango
-_old/CangoAxes-1v33.js"></script>
+/CangoAnimation-5v00.js"></script>
 <script type="text/javascript" src="./../data/w11/cango
-_old/CangoAnimation-4v01.js"></script>
-<script type="text/javascript" src="./../data/w11/cango
-_old/gearUtils-05.js"></script>
+/gearUtils-05.js"></script>
 
 <canvas id='cango_gear' width='800' height='750'></canvas>
  
@@ -197,7 +196,7 @@ import math
 # 主要用來取得畫布大小
 canvas = doc["cango_gear"]
 # 此程式採用 Cango Javascript 程式庫繪圖, 因此無需 ctx
-#ctx = canvas.getContext("2d")
+ctx = canvas.getContext("2d")
 cango = window.Cango.new
 # 針對變數的轉換, shapeDefs 在 Cango 中資料型別為變數, 可以透過 window 轉換
 shapedefs = window.shapeDefs
@@ -205,11 +204,15 @@ shapedefs = window.shapeDefs
 # in CangoAnimation.js
 #interpolate1 = window.interpolate
 # Cobi 與 createGearTooth 都是 Cango Javascript 程式庫中的物件
-cobj = window.Cobj.new
+#cobj = window.Cobj.new
+shape = window.Shape.new
+path = window.Path.new
 creategeartooth = window.createGearTooth.new
+
+tweener = window.Tweener.new
 # 經由 Cango 轉換成 Brython 的 cango, 指定將圖畫在 id="cango_gear" 的 canvas 上
 cgo = cango("cango_gear")
- 
+
 ######################################
 # 畫正齒輪輪廓
 #####################################
@@ -226,10 +229,10 @@ pr = n*m/2 # gear Pitch radius
 data = creategeartooth(m, n, pa)
 # Brython 程式中的 print 會將資料印在 Browser 的 console 區
 #print(data)
-gearTooth = cobj(data, "SHAPE", {
-        "fillColor":"#ddd0dd",
-        "border": True,
-        "strokeColor": "#606060" })
+gearTooth = shape(data, {
+  "fillColor":"#ddd0dd",
+  "border": True,
+  "strokeColor": "#606060" })
 gearTooth.rotate(180/n) # rotate gear 1/2 tooth to mesh
 # 單齒的齒形資料經過旋轉後, 將資料複製到 gear 物件中
 gear = gearTooth.dup()
@@ -248,12 +251,46 @@ for i in range(1, n):
 # 建立軸孔
 # add axle hole, hr 為 hole radius
 hr = 0.6*pr # diameter of gear shaft
-shaft = cobj(shapedefs.circle(hr), "PATH")
+shaft = path(shapedefs.circle(hr))
 shaft.revWinding()
 gear.appendPath(shaft) # retain the 'moveTo' command for shaft sub path
+
+# setup the animation
+# backlash (mm)
+bklsh = 0.04*m
+# centre shift to make backlash
+dC = bklsh/(2*math.tan(math.pi*pa/180))
+# np 為小齒輪齒數
+np = 13
+# gear ratio
+gr = n/np              
+gearConfig = {'cx':-pr, 'cy':0, 'degs':[0, 360]}
+# gr*0.666 rpm
+#pinionConfig = {'cx':pr+dC, 'cy':0, 'degs':[0, -gr*360]}
+# 0.666 rpm
+twnr = tweener(0, 90000, "loop")
+
 cx = canvas.width/2
 cy = canvas.height/2
-gear.translate(cx, cy)
+#gear.translate(cx, cy)
 # render 繪出靜態正齒輪輪廓
-cgo.render(gear)
+#cgo.render(gear)
+# 利用 gear 資料複製一份, 命名為 gear1
+gear1 = gear.dup()
+
+from time import time
+from browser.timer import request_animation_frame as raf
+from browser.timer import set_interval
+
+deg = math.pi/180
+
+def draw():
+    cgo.clearCanvas()
+    gear.rotate(2*deg)
+    # 在特定位置, 以特定 scale, 特定 degs 執行 render
+    cgo.render(gear, {'x':cx-pr/2, 'y':cy, 'scl':0.5, 'degs':0})
+    gear1.rotate(-2*deg)
+    cgo.render(gear1, {'x':cx+pr*2*0.5-pr/2, 'y':cy, 'scl':0.5, 'degs':0})
+
+set_interval(draw, 2)
 </script>
