--- a/content/20170601.md
+++ b/content/20170601.md
@@ -25,7 +25,7 @@ brython({debug:1, pythonpath:['./../data/py']});
  
 <!-- 以下實際利用  Brython 繪圖-->
 <canvas id="onegear" width="800" height="600"></canvas>
-
+<div id="onegear_div" width="800" height="20"></div>
 
 <script type="text/python3">
 from browser import document as doc
@@ -150,13 +150,25 @@ class Spur(object):
             self.create_line(lfx,lfy,rfx,rfy,fill=color)
 canvas = doc['onegear']
 ctx = canvas.getContext("2d")
-x = (canvas.width)/5
-y = (canvas.height)/5
-r = 0.5*(canvas.height/2)
+x = (canvas.width)/2
+y = (canvas.height)/2
+r = 0.8*(canvas.height/2)
 # 齒數
 n = 52
 # 壓力角
 pa = 20
 Spur(ctx).Gear(x, y, r, n, pa, "blue")
+# 以下列出 W11 2B 未出席人數
+data = open("./../data/w11/2b0503.txt", encoding="utf-8").read()
+count = 0
+# 去掉前面兩列
+student = data.split("\n")[2:]
+for i in range(len(student)):
+    each = student[i].split("\t")
+    if each[1] != "出席":
+        count = count + 1
+#print(count)
+div = doc["onegear_div"]
+div <= "2b: " +  str(count) + "/" + str(len(student))
 </script>
 
