--- a/content/20170622.md
+++ b/content/20170622.md
@@ -9,6 +9,16 @@ Author: 40423152
 
 本周內容
 
+初代原型機
+
+<iframe src="https://player.vimeo.com/video/222612490" width="640" height="1152" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/222612490">video-1493569301</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+四足
+
+<iframe src="https://player.vimeo.com/video/222340552" width="640" height="356" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/222340552">40423116-2017springcd-final-6.mp4</a> from <a href="https://vimeo.com/user47573583">40423116</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
 V-rep
 
 <a href="http://imgur.com/8voKwZl"><img src="http://i.imgur.com/8voKwZl.png" title="source: imgur.com" /></a>
