--- a/content/20170622.md
+++ b/content/20170622.md
@@ -11,10 +11,16 @@ Author: 40423152
 
 初代原型機
 
+交給學長印製時有尺寸搞錯 導致這種情況發生
+
+於是有更動過設計部分
+
 <iframe src="https://player.vimeo.com/video/222612490" width="640" height="1152" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/222612490">video-1493569301</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
-四足
+四足行走機構
+
+由於馬達扭力不足，故只能拿在手上拍攝
 
 <iframe src="https://player.vimeo.com/video/222340552" width="640" height="356" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/222340552">40423116-2017springcd-final-6.mp4</a> from <a href="https://vimeo.com/user47573583">40423116</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
@@ -25,12 +31,26 @@ V-rep
 
 
 足部
+
 <a href="http://imgur.com/fuMObX2"><img src="http://i.imgur.com/fuMObX2.png" title="source: imgur.com" /></a>
 
 腿部
+
 <a href="http://imgur.com/1GzrcTz"><img src="http://i.imgur.com/1GzrcTz.png" title="source: imgur.com" /></a>
 
 軸部
 
 <a href="http://imgur.com/zHh6bEI"><img src="http://i.imgur.com/zHh6bEI.png" title="source: imgur.com" /></a>
+
+3D檢視
+
+<iframe src="./../18/123.html" width="800" height="600"></iframe>
+
+<iframe src="./../18/147.html" width="800" height="600"></iframe>
+
+<iframe src="./../18/258.html" width="800" height="600"></iframe>
+
+<iframe src="./../18/456.html" width="800" height="600"></iframe>
+
+
 
