--- a/content/20170622.md
+++ b/content/20170622.md
@@ -1,4 +1,4 @@
-Title: w17
+Title: 期末
 Date: 2017-06-22 12:56
 Category:作業
 Tags: 作業
@@ -25,32 +25,44 @@ Author: 40423152
 <iframe src="https://player.vimeo.com/video/222340552" width="640" height="356" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/222340552">40423116-2017springcd-final-6.mp4</a> from <a href="https://vimeo.com/user47573583">40423116</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
-V-rep
+雙足行走機構
 
-<a href="http://imgur.com/8voKwZl"><img src="http://i.imgur.com/8voKwZl.png" title="source: imgur.com" /></a>
+零件繪製部分
 
+<iframe src="https://player.vimeo.com/video/223497595" width="640" height="342" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/223497595">錄製_2017_06_29_00_27_48_745-1</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
-足部
+組合部分
 
-<a href="http://imgur.com/fuMObX2"><img src="http://i.imgur.com/fuMObX2.png" title="source: imgur.com" /></a>
+<iframe src="https://player.vimeo.com/video/223497637" width="640" height="342" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/223497637">錄製_2017_06_29_00_27_48_745-2</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
-腿部
+V-rep模擬
 
-<a href="http://imgur.com/1GzrcTz"><img src="http://i.imgur.com/1GzrcTz.png" title="source: imgur.com" /></a>
+<iframe src="https://player.vimeo.com/video/223501721" width="640" height="342" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/223501721">錄製_2017_06_29_02_44_37_7</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
-軸部
-
-<a href="http://imgur.com/zHh6bEI"><img src="http://i.imgur.com/zHh6bEI.png" title="source: imgur.com" /></a>
 
 3D檢視
+<iframe src="./../w18/washer.html" width="800" height="600"></iframe>
+<iframe src="./../w18/leg.html" width="800" height="600"></iframe>
+<iframe src="./../w18/mid.html" width="800" height="600"></iframe>
 
-<iframe src="./../18/123.html" width="800" height="600"></iframe>
+<link href="./../work/madeleine/src/css/Madeleine.css" rel="stylesheet">
+<script src="./../work/madeleine/src/stats.js"></script>
+<script src="./../work/madeleine/src/detector.js"></script>
+<script src="./../work/madeleine/src/three.min.js"></script>
+<script src="./../work/madeleine/src/Madeleine.js"></script>
+<div id="target" class="madeleine"></div>
 
-<iframe src="./../18/147.html" width="800" height="600"></iframe>
-
-<iframe src="./../18/258.html" width="800" height="600"></iframe>
-
-<iframe src="./../18/456.html" width="800" height="600"></iframe>
-
+<script>
+window.onload = function(){
+    var madeleine = new Madeleine({
+      target: 'target', // target div id
+      data: './../w18/assembly.stl', // data path
+      path: './../work/madeleine/src/' // path to source directory from current html file
+    });
+}; 
+</script>
 
 
