--- a/content/20170622.md
+++ b/content/20170622.md
@@ -9,11 +9,15 @@ Author: 40423152
 
 本周內容
 
+四足行走機構我與18號負責駔裝與測試的部分
+
 初代原型機
+
+組裝時利用了單芯線作為軸，並用棒棒糖棍當成墊圈使用
 
 交給學長印製時有尺寸搞錯 導致這種情況發生
 
-於是有更動過設計部分
+於是有更動過設計部分，拍攝者為18號，被拍攝者為52號(我)
 
 <iframe src="https://player.vimeo.com/video/222612490" width="640" height="1152" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/222612490">video-1493569301</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
@@ -26,6 +30,8 @@ Author: 40423152
 <p><a href="https://vimeo.com/222340552">40423116-2017springcd-final-6.mp4</a> from <a href="https://vimeo.com/user47573583">40423116</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 雙足行走機構
+
+練習時未發現在錄製，故影片有進行剪輯。
 
 零件繪製部分
 
@@ -44,6 +50,16 @@ V-rep模擬
 
 
 3D檢視
+
+<a href="./../data/w18/LEG.slvs">雙足-腳</a>
+
+<a href="./../data/w18/washer.slvs">雙足-墊圈</a>
+
+<a href="./../data/w18/mid.slvs">雙足-軸</a>
+
+<a href="./../data/w18/assembly.slvs">雙足組合</a>
+
+
 <iframe src="./../w18/washer.html" width="800" height="600"></iframe>
 <iframe src="./../w18/leg.html" width="800" height="600"></iframe>
 <iframe src="./../w18/mid.html" width="800" height="600"></iframe>
