--- a/content/20170622.md
+++ b/content/20170622.md
@@ -29,6 +29,27 @@ Author: 40423152
 <iframe src="https://player.vimeo.com/video/222340552" width="640" height="356" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/222340552">40423116-2017springcd-final-6.mp4</a> from <a href="https://vimeo.com/user47573583">40423116</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
+Fossil推送
+
+學員已嘗試過將東西送上
+
+照步驟上來說是沒有問題的
+
+但fossil倉儲上卻沒有新增東西
+
+嘗試輸入fossil "update"卻出現許多的conflict
+
+clone fossil倉儲
+<iframe src="https://player.vimeo.com/video/223518314" width="640" height="362" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/223518314">錄製_2017_06_29_04_10_14_46</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+
+
+推送
+<iframe src="https://player.vimeo.com/video/223518279" width="640" height="362" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/223518279">錄製_2017_06_29_04_15_58_957</a> from <a href="https://vimeo.com/user46451216">Willy Lai</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+
 雙足行走機構
 
 練習時未發現在錄製，故影片有進行剪輯。
@@ -60,25 +81,5 @@ V-rep模擬
 <a href="./../data/w18/assembly.slvs">雙足組合</a>
 
 
-<iframe src="./../w18/washer.html" width="800" height="600"></iframe>
-<iframe src="./../w18/leg.html" width="800" height="600"></iframe>
-<iframe src="./../w18/mid.html" width="800" height="600"></iframe>
-
-<link href="./../work/madeleine/src/css/Madeleine.css" rel="stylesheet">
-<script src="./../work/madeleine/src/stats.js"></script>
-<script src="./../work/madeleine/src/detector.js"></script>
-<script src="./../work/madeleine/src/three.min.js"></script>
-<script src="./../work/madeleine/src/Madeleine.js"></script>
-<div id="target" class="madeleine"></div>
-
-<script>
-window.onload = function(){
-    var madeleine = new Madeleine({
-      target: 'target', // target div id
-      data: './../w18/assembly.stl', // data path
-      path: './../work/madeleine/src/' // path to source directory from current html file
-    });
-}; 
-</script>
 
 
